--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -13,3 +13,8 @@ ENV TERM xterm
 RUN apt-get install -y vim less
 RUN pip install --upgrade pip
 RUN pip install --upgrade setuptools
+
+COPY requirements.txt ${PWD}
+RUN pip install -r requirements.txt
+
+WORKDIR /home/opt
